--- a/css/style1b26.css
+++ b/css/style1b26.css
@@ -6,6 +6,8 @@
 
 /*@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap');*/
 
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700');
+
 :root {
 	--main-color: #4e4e4e;
 	--sub-color: #ffc000;
@@ -4209,3 +4211,39 @@ body.modal-open {
 		background-position: 100% 0;
 	  };
 	}
+	
+	
+	
+.dog-section{
+	    width: 100%;
+    float: left;
+    position: relative;
+	font-family: 'azo-sans-web', Arial, Helvetica, sans-serif;
+}	
+	
+.dog-section-single{width: 100%;display: table;float: left;margin: 25px 0px;}
+.dog-section-single .dog-section-left{width: 50%;vertical-align: middle;display: table-cell;}	
+.dog-section-single .dog-section-left .dog-section-image{width: 100%;display: inline-block;vertical-align: top;}
+.dog-section-single .dog-section-left .dog-section-image img{text-align: center;}
+.dog-section-single .dog-section-right{width: 50%;vertical-align: middle;display: table-cell;}
+.dog-section-single .dog-section-content{width: 100%;display: inline-block;vertical-align: top;text-align: left;}
+.dog-section-single .dog-section-content .section-subtitle{display: block;font-weight: normal;text-transform: uppercase;letter-spacing: 2px;font-size: 13px;margin-bottom: 10px;color: #0f5477;}
+
+.dog-section-single .dog-section-content .section-title{margin-bottom: 30px;font-size: 34px;font-weight: 700;line-height: 44px;color: #000;width: 100%;display: inline-block;vertical-align: top;position: relative;}
+
+.dog-section-single .dog-section-content .section-title:before{
+	content:"";
+	width: 100px;
+	height: 2px;
+	background:  #0f5477;
+	position: absolute;
+	bottom: -10px;
+}
+.dog-section-single .dog-section-content p{margin-bottom: 15px;color: #5d5d5d;width: 100%;display: inline-block;vertical-align: top;font-size: 14px;}
+.dog-section-single .dog-section-content ul{width: 100%;float: left;padding-left: 25px;}
+.dog-section-single .dog-section-content ul li{margin-bottom: 10px;color: #5d5d5d;width: 100%;vertical-align: top;font-size: 14px;} 
+
+
+ 
+.dog-section-single:nth-child(even) .dog-section-left{float: right;} 
+.dog-section-single:nth-child(even) .dog-section-right{float: left;} 
