--- a/css/style1b26.css
+++ b/css/style1b26.css
@@ -1313,13 +1313,13 @@
      vertical-align: top;
      width: 100%;
      min-height: 100vh !important;
-     position: -webkit-sticky;
+     /* position: -webkit-sticky;
      position: -moz-sticky;
      position: -ms-sticky;
      position: -o-sticky;
      position: sticky;
      top: 0px;
-     left: 0px;
+     left: 0px; */
 }
  .content-banner, .info-blocks {
      position: relative;
@@ -3799,13 +3799,13 @@
         display: table;
         float: left;
         padding: 25px 0px;
-        position: -webkit-sticky;
+        /* position: -webkit-sticky;
         position: -moz-sticky;
         position: -ms-sticky;
         position: -o-sticky;
         position: sticky;
         top: 0px;
-        left: 0px;
+        left: 0px; */
         min-height: 100vh !important;
         background: #C0DEED;
         box-shadow: 0px 0px 30px 30px #00000038;
@@ -3899,13 +3899,13 @@
          padding: 80px 0px;
          display: table;
          width: 100%;
-         position: -webkit-sticky;
+         /* position: -webkit-sticky;
          position: -moz-sticky;
          position: -ms-sticky;
          position: -o-sticky;
          position: sticky;
          top: 0px;
-         left: 0px;
+         left: 0px; */
     }
      .fixed-active-section .content-banner-wrap-theme .container{
          vertical-align: middle;
