--- a/css/style1b26.css
+++ b/css/style1b26.css
@@ -3826,7 +3826,8 @@
         /* box-shadow: 0px 0px 30px 30px #00000038; */
         padding-right: 48px;
         padding-left: 48px;
-        display: flex;
+        /* display: flex;
+        justify-content: center; */
     }
    
 
@@ -3913,9 +3914,9 @@
         vertical-align: top;
         font-size: 16px;
     }
-     .dog-section-single:nth-child(even){
+     /* .dog-section-single:nth-child(even){
         direction: rtl;
-    }
+    } */
      .fixed-active-section{
     }
      /* .content-banner-box-shadow{
