--- a/css/wow.css
+++ b/css/wow.css
@@ -3350,3 +3350,7 @@
   -webkit-animation-name: slideOutUp;
   animation-name: slideOutUp;
 }
+.content-banner-wrap{
+  background: var(--new-black-color);
+
+}
