--- a/css/style1b26.css
+++ b/css/style1b26.css
@@ -3974,3 +3974,18 @@
         margin-left: auto;
         margin-right: auto;
     }
+
+
+.rovergib-left-right-image{
+	max-width: 300px;
+	max-height: 300px;
+	width: auto !important;
+	height: auto !important;
+}
+
+.left-right-image{
+	max-width: 350px;
+	max-height: 350px;
+	width: auto !important;
+	height: auto !important;
+}
