--- a/css/wow.css
+++ b/css/wow.css
@@ -1440,7 +1440,7 @@
 
 @-webkit-keyframes fadeInUp {
   from {
-    opacity:  1;
+    opacity:  0;
     -webkit-transform: translate3d(0, 20%, 0);
     transform: translate3d(0, 20%, 0);
   }
@@ -1454,7 +1454,7 @@
 
 @keyframes fadeInUp {
   from {
-    opacity: 1;
+    opacity: 0;
     -webkit-transform: translate3d(0, 20%, 0);
     transform: translate3d(0, 20%, 0);
   }
@@ -1467,8 +1467,9 @@
 }
 
 .fadeInUp {
-  -webkit-animation-name: fadeInUp;
+  -webkit-animation-name:fadeInUp;
   animation-name: fadeInUp;
+  animation-duration: 1s!important;
 }
 
 
