--- a/css/style1b26.css
+++ b/css/style1b26.css
@@ -4166,3 +4166,10 @@ padding-bottom: 0px;
 {
     margin-bottom:20px ;
 }
+@media (min-width:320px) {
+    .banner-main-top h2 .Textfadehome{
+     color: white ;
+    /* color: var(--sub-color) !important; */
+}
+
+}
