--- a/css/style1b26.css
+++ b/css/style1b26.css
@@ -4128,7 +4128,7 @@
 .flip-clock-small-wrapper .flip-clock-divider .flip-clock-label, body .flip-clock-small-wrapper ul li a div div.inn
 
 {
-    color:yellow !important;
+    color:white !important;
 }
 .flip-clock-label
 {
