--- a/css/style1b26.css
+++ b/css/style1b26.css
@@ -1247,7 +1247,7 @@
      -webkit-animation: btm-fade-animate 1.2s ease-out forwards;
      animation: btm-fade-animate 1.2s ease-out forwards;
      -webkit-animation-delay: 0.1s;
-     animation-delay: 0.1s;
+     /* animation-delay: 0.1s; */
 }
  .banner-header-button .button {
      box-shadow: 0px 0px 30px var(--shadow-color);
