--- a/css/style1b26.css
+++ b/css/style1b26.css
@@ -871,7 +871,7 @@
      opacity: 0;
      width: 100%;
      height: 100%;
-     z-index: 10;
+     z-index: 0;
      background: var(--main-color);
 }
  .menu-open #bg-wrapper {
@@ -924,7 +924,7 @@
      width: 100%;
      padding: 12px 24px;
      top: 0px;
-     z-index: 99;
+     z-index: 10;
      background: #FFFFFF;
 }
  #navbar.sticky {
@@ -1048,7 +1048,7 @@
      display: inline-block;
 }
  #nav-right {
-     position: relative;
+     /*position: relative;*/
      display: flex;
      margin-left: auto;
 }
@@ -1065,7 +1065,7 @@
      margin: 8px 0px;
 }
  #nav-main ul li, #nav-right ul li {
-     position: relative;
+     /*osition: relative;p*/
      display: inline-block;
      padding: 0px 24px;
      padding: 8px 0px;
@@ -1087,6 +1087,7 @@
      -webkit-transition: all 0.2s ease;
      transition: all 0.2s ease;
      cursor: pointer;
+     z-index:9999;
 }
  #nav-main ul li a {
      letter-spacing: 1px;
