--- a/css/style1b26.css
+++ b/css/style1b26.css
@@ -1639,6 +1639,7 @@
      position: relative;
      display: block;
      text-align: center;
+     padding-top: 20px;
      padding-left: 60px;
      padding-right: 60px;
     /* padding: 0px 40px; */
@@ -2914,7 +2915,7 @@
  @media (min-width: 1921px) {
 }
  @media (min-width: 1600px) {
-     .container {
+     .container, .container-fluid {
          max-width: 1536px;
          padding-right: 48px;
          padding-left: 48px;
