--- a/css/style1b26.css
+++ b/css/style1b26.css
@@ -4198,7 +4198,17 @@ padding-bottom: 0px;
 
 }
 
-@media only screen and (max-width:767px) and (min-width:520px)  {
+
+/* @media only screen and (max-width:1184px) and (min-width:789px)  {
+    canvas
+    {
+        height: 250vh !important;
+    }
+
+   
+    } */
+
+@media only screen and (max-width:768px) and (min-width:520px)  {
     canvas
     {
         height: 250vh !important;
