--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width:1200px) and (max-height:400px)and (orientation: landscape){
+/* @media only screen and (min-width:1200px) and (max-height:400px)and (orientation: landscape){
   html {
     transform: rotate(-90deg);
     transform-origin: left top;
@@ -15,4 +15,4 @@
 	.for-leter-space{
      margin-left:38px;
 }
-}
+} */
