--- a/css/style.less.less
+++ b/css/style.less.less
@@ -2733,44 +2733,47 @@ body.modal-open {
   }
 }
 
-#aboveVideo {
-  min-height: 820px!important;
+.halwsb {
+  background-image: url(../images/newimg2.png);
+  .col-md-7; 
+  .align-self-md-center;
+  .align-self-end;
+  }
+#halwsb {
+  background-image: url(../images/newimg2.png);
+  .col-md-7; 
+  .align-self-md-center;
+  .align-self-end;
 }
-#HalWSB {
-  padding-top:8%;padding-right:0px;
-}
-#topText {
-  padding-top:12%;padding-left:0px!important;
-}
-@media only screen and (min-width: 568px) and (max-height: 568px) and (orientation: landscape) {
-  #aboveVideo {
-    min-height: 620px!important;
-  }
-  #HalWSB {
-    padding-top:5%;
-  }
-  #topText {
-    padding-top:0%;padding-left:0px!important;
-    min-width: 41%!important;
-  }
-  #clock {
-    float:right;
-  }
+
+@media only screen and (orientation: portrait) {
+  .halwsb {
+    // background-image: url(../images/newimg.png);
+    .col-md-7; 
+    .align-self-md-center;
+    .align-self-end;
+    }
+  #halwsb {
+    // background-image: url(../images/newimg.png);
+    .col-md-7; 
+    .align-self-md-center;
+    .align-self-end;
+    }
 } 
-@media only screen and (max-width: 568px) and (min-height: 568px) and (orientation: portrait) {
-  #aboveVideo {
-    min-height: 720px!important;display: block!important;
-  }
-  #HalWSB {
-    padding-top:12%;padding-right:0px;
-  }
-  #topText {
-  padding-top:0%;padding-left:0px!important;
-  }
+@media only screen and (orientation: landscape) {
+  .halwsb {
+    background-image: url(../images/newimg2.png);
+    .col-md-7; 
+    .align-self-md-center;
+    .align-self-end;
+    }
+    #halwsb {
+    // background-image: url(../images/newimg.png);
+    .col-md-7; 
+    .align-self-md-center;
+    .align-self-end;
+    }
 } 
-#clock {
-  min-width: 332px;
-}
 
 /*@media only screen (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
     */
