--- a/css/style.css
+++ b/css/style.css
@@ -2743,6 +2743,16 @@ body.modal-open {
   padding-top:12%;padding-left:0px!important;
 }
 @media only screen and (min-width: 568px) and (max-height: 568px) and (orientation: landscape) {
+  #allDefi {
+    font-size: 42px;
+  }
+  #inOneCoin {
+    font-size: 22px;
+    margin-right: 24px;
+  }
+  #inOneClick {
+    font-size: 22px;
+  }
   #aboveVideo {
     min-height: 620px!important;
   }
