change pink to blaxk bg in video fs

--- a/css/style.css
+++ b/css/style.css
@@ -1158,7 +1158,7 @@ a.button,.button {
   margin: 0px;
   width: 100%;
   height: auto;
-  background: #eeaacc;
+  background: #000004;
   min-height: 240px;
 }
 
