--- a/css/style.css
+++ b/css/style.css
@@ -3022,8 +3022,22 @@ body.modal-open {
   vertical-align: top;
   font-size: 16px;
   font-weight: 600;
+  background-color: #ffff;
+    border-radius: 10px;
+    padding: 6px;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
 }
-
+.list_bg{
+  background-color: #ffff;
+  border-radius: 10px;
+  padding: 6px;
+  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
+  width: max-content;
+  padding-right: 20px;
+}
+.list_bg ul{
+  margin-bottom: 0px;
+}
 .dog-section-single .dog-section-content ul {
   width: 100%;
   float: left;
@@ -3144,6 +3158,11 @@ body.modal-open {
   vertical-align: top;
   font-size: 16px;
   font-weight: 600;
+  background-color: #ffff;
+  border-radius: 10px;
+  padding: 6px;
+  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
+  margin-top: 10px;
 }
 
 #nav-main .get-modified {
