--- a/css/style.css
+++ b/css/style.css
@@ -1997,7 +1997,7 @@ body.modal-open {
 
 @media (min-width: 1600px) {
   .container {
-    max-width: 1536px;
+    max-width: 100%;
     padding-right: 48px;
     padding-left: 48px;
   }
