--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,11 @@
   --sub-color: #ffc000;
   --hover-color: #ECAF4E;
   --shadow-color: rgba(229, 147, 16, 0.48);
-  --dark-color: #111116;
+  --dark-color: #dd8613;
   --light-color: #e7e8e9;
   --grey-color: #97979a;
   /* --new-black-color:#1f1f24; */
-  --new-black-color: rgb(17, 14, 25);
+  --new-black-color: rgb(14, 70, 9);
   --grey-light-color: #c2c4c8;
   --nav-light-color: #8b8d94;
   --border-color: #E2E2E2;
@@ -1400,7 +1400,7 @@ body.modal-open {
   line-height: 5px;
   text-align: center;
   font-weight: 400;
-  color: #000003;
+  color: green;
   border: 1px solid #a7a4a4;
 }
 
