--- a/css/style.css
+++ b/css/style.css
@@ -434,7 +434,7 @@ a.button,.button {
   overflow: hidden;
   width: 100%;
   float: left;
-  box-shadow: 0px 0px 30px 30px #000002;
+  box-shadow: 0px 0px 30px 30px #ffc000;
 }
 
 .home-wrap #content-wrapper {
@@ -2922,7 +2922,7 @@ body.modal-open {
   /* min-height: 100vh !important; */
   /* background: #1f1f24; */
   /*background-color: #c0deed;*/
-  /* box-shadow: 0px 0px 30px 30px #00000038; */
+  /* box-shadow: 0px 0px 30px 30px #; */
   padding-right: 48px;
   padding-left: 48px;
   /* display: flex;
@@ -3065,7 +3065,7 @@ body.modal-open {
     } */
 
 /* .content-banner-box-shadow{
-         box-shadow: 0px 0px 30px 30px #000000ab;
+         box-shadow: 0px 0px 30px 30px #0;
     } */
 
 .content-banner-wrap-theme {
