--- a/css/style.less
+++ b/css/style.less
@@ -10,7 +10,7 @@
   --sub-color: #ffc000;
   --hover-color: #ECAF4E;
   --shadow-color: rgba(229, 147, 16, 0.48);
-  --dark-color: #111116;
+  --dark-color: #ffc000;
   --light-color: #e7e8e9;
   --grey-color: #97979a;
   /* --new-black-color:#1f1f24; */
